# redbpf

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PREAMBLE  README.md  TUTORIAL.md  flake.nix
.circleci/: config.yml
.github/workflows/: build-test.yml  rust.yml
bpf-sys/: Cargo.toml  bindings.h  bpfsys-musl.h  build.rs  libbpf_xdp.h
bpf-sys/src/: headers.rs  lib.rs  perf_reader.rs  type_gen.rs  uname.rs
cargo-bpf/: Cargo.toml  build.rs
cargo-bpf/src/: accessors.rs  bindgen.rs  build.rs  build_c.rs  build_constants.rs  ebpf_io.rs  lib.rs  llvm.rs  load.rs  main.rs  new.rs  new_program.rs
cargo-bpf/src/commands/: bindgen.rs  build.rs  build_programs.rs  mod.rs  new.rs  new_program.rs
examples/example-probes/: Cargo.toml  build.rs
examples/example-probes/include/: bindings.h
examples/example-probes/src/: bindings.rs  lib.rs
examples/example-probes/src/biolatpcts/: main.rs
examples/example-probes/src/bounded_loop/: main.rs
examples/example-probes/src/connection_tracer/: main.rs  mod.rs
examples/example-probes/src/echo/: main.rs  mod.rs
examples/example-probes/src/global_var/: main.rs  mod.rs
examples/example-probes/src/hashmaps/: main.rs  mod.rs
examples/example-probes/src/mallocstacks/: main.rs  mod.rs
examples/example-probes/src/p0f/: main.rs  mod.rs
examples/example-probes/src/sharemap1/: main.rs
examples/example-probes/src/sharemap2/: main.rs
examples/example-probes/src/socket_steering/: main.rs
examples/example-probes/src/tasks/: main.rs
examples/example-probes/src/tc_map_share/: main.rs
examples/example-probes/src/tcp_lifetime/: main.rs  mod.rs
examples/example-probes/src/vfsreadlat/: main.rs  mod.rs
examples/example-userspace/: Cargo.toml  build.rs
examples/example-userspace/examples/: biolatpcts.rs  bounded-loop.rs  connection-tracer.rs  echo.rs  global-var.rs  hashmaps.rs  mallocstacks.rs  p0f.rs  sharemap1.rs  sharemap2.rs  socket-steering.rs  tasks.rs  tc-map-share.rs  tcp-lifetime.rs  vfsreadlat.rs
include/: bpf_helpers.h  redbpf_helpers.h  xdp.h  xdp_bindings.h
redbpf/: Cargo.toml  README.md
redbpf-macros/: Cargo.toml  build.rs
redbpf-macros/src/: lib.rs  mem.rs
redbpf-probes/: Cargo.toml  build.rs
redbpf-probes/include/: bpf_helper_defs.h  bpf_helpers.h  bpf_iter.h  kernel_supplement.h  redbpf_helpers.h  vmlinux_supplement.h  xdp.h
redbpf-probes/src/: bindings.rs  helpers.rs  kprobe.rs  lib.rs  maps.rs  net.rs  registers.rs  ringbuf.rs  socket.rs  socket_filter.rs  xdp.rs
redbpf-probes/src/bpf_iter/: context.rs  mod.rs
redbpf-probes/src/kprobe/: mod.rs  prelude.rs
redbpf-probes/src/sk_lookup/: mod.rs  prelude.rs
redbpf-probes/src/socket_filter/: mod.rs  prelude.rs
redbpf-probes/src/sockmap/: mod.rs  prelude.rs
redbpf-probes/src/tc/: maps.rs  mod.rs
redbpf-probes/src/tracepoint/: mod.rs  prelude.rs
redbpf-probes/src/uprobe/: mod.rs  prelude.rs
redbpf-probes/src/xdp/: devmap.rs  mod.rs  prelude.rs  xskmap.rs
redbpf-tools/: Cargo.toml  build.rs
redbpf-tools/probes/: Cargo.toml  build.rs
redbpf-tools/probes/include/: bindings.h
redbpf-tools/probes/src/: bindings.rs  lib.rs
redbpf-tools/probes/src/iotop/: main.rs  mod.rs
redbpf-tools/probes/src/knock/: main.rs  mod.rs
redbpf/src/: btf.rs  cpus.rs  error.rs  lib.rs  perf.rs  ringbuf.rs  symbols.rs  xdp.rs
redbpf/src/load/: loader.rs  map_io.rs  mod.rs
redbpf/src/sys/: perf.rs
scripts/: build-test.sh  bump-version.sh
src/: cpus.rs  lib.rs  perf.rs  uname.rs
src/sys/: perf.rs
