[package]
name = "bpf-sys"
version = "2.0.0-rc2"
description = "Bindings for libbpf"
repository = "https://github.com/foniod/redbpf"
documentation = "https://foniod.org/api/bpf_sys/"
authors = ["Peter Parkanyi <p@symmetree.dev>", "Junyeong Jeong <rhdxmr@gmail.com>"]
links = "bpf"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["bpf", "ebpf", "ffi"]

[dependencies]
zero = "0.1"
libc = "0.2"
regex = { version = "1.5" }

[build-dependencies]
cc = "1.0"
bindgen = {version = "0.59.1", default-features = false, features = ["runtime"]}
libc = "0.2"
glob = "0.3.0"
