[package]
name = "bpf-sys"
version = "2.3.0"
description = "Bindings for libbpf"
repository = "https://github.com/foniod/redbpf"
homepage = "https://foniod.org"
documentation = "https://docs.rs/bpf-sys"
authors = ["Peter Parkanyi <p@symmetree.dev>", "Junyeong Jeong <rhdxmr@gmail.com>"]
links = "bpf"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["bpf", "ebpf", "ffi"]

[dependencies]
zero = "0.1"
libc = "0.2"
regex = { version = "1.5" }
glob = "0.3.0"
libbpf-sys = "0.6.1-2"

[build-dependencies]
cc = "1.0"
bindgen = {version = "0.59.2", default-features = false, features = ["runtime"]}
libc = "0.2"
glob = "0.3.0"

[package.metadata.docs.rs]
all-features = true
