[package]
name = "cargo-bpf"
version = "2.3.0"
description = "Cargo plugin to manage eBPF probes using redbpf"
repository = "https://github.com/foniod/redbpf"
homepage = "https://foniod.org"
documentation = "https://docs.rs/cargo-bpf/latest/cargo_bpf_lib/"
authors = ["Alessandro Decina <alessandro.d@gmail.com>", "Peter Parkanyi <p@symmetree.dev>", "Junyeong Jeong <rhdxmr@gmail.com>"]
edition = "2018"
keywords = ["cargo", "redbpf", "bpf", "plugin", "subcommand"]
categories = ["development-tools::cargo-plugins"]
license = "MIT OR Apache-2.0"

[lib]
name = "cargo_bpf_lib"

[[bin]]
name = "cargo-bpf"
required-features = ["command-line"]

[dependencies]
clap = { version = "2.33", optional = true }
bindgen = {version = "0.59.2", default-features = false, features = ["runtime"], optional = true}
toml_edit = { version = "0.2", optional = true }
libbpf-sys = { version = "0.6.1-2", optional = true }
bpf-sys = { version = "2.3.0", path = "../bpf-sys", optional = true }
redbpf = { version = "2.3.0", path = "../redbpf", default-features = false, optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "^1.0.1", features = ["rt", "macros", "signal"], optional = true }
hexdump = { version = "0.1", optional = true }
libc = {version = "0.2.66", optional = true}
syn = { version = "1.0", features = ["full", "visit"], optional = true }
quote = { version = "1.0", optional = true }
proc-macro2 = {version = "1.0", optional = true}
tempfile = { version = "3.1", optional = true}
lazy_static = "1.0"
glob = "0.3"
anyhow = "1.0"
# if `strict-versioning` feature is off, llvm-sys-130 can be linked to
# libLLVM13 and newer libraries.
llvm-sys-130 = { version = "130", optional = true, package = "llvm-sys" }
cfg-if = "1.0"
rustversion = "1.0"
rustc_version = "0.4.0"
semver = "1.0.0"
goblin = "0.4.3"

[build-dependencies]
regex = "1.0.0"
cfg-if = "1.0.0"

[features]
default = ["command-line", "llvm-sys"]
bindings = ["libbpf-sys", "bpf-sys", "bindgen", "syn", "quote", "proc-macro2", "tempfile"]
build = ["bindings", "libc", "toml_edit", "redbpf"]
docsrs-llvm = ["llvm-sys-130/no-llvm-linking", "llvm-sys-130/disable-alltargets-init"]
build-c = []
command-line = ["build", "clap", "redbpf/load", "futures", "tokio", "hexdump"]
llvm-sys = ["llvm-sys-130"]  # Use current default LLVM version or higher
llvm13 = ["llvm-sys-130"]

[package.metadata.docs.rs]
all-features = false
no-default-features = true
features = ["command-line", "docsrs-llvm"]
rustdoc-args = ["--cfg", "docsrs"]
