[package]
name = "redbpf-macros"
description = "Procedural macros for redbpf"
repository = "https://github.com/redsift/redbpf"
documentation = "https://ingraind.org/api//redbpf_macros/"
authors = ["Alessandro Decina <alessandro.d@gmail.com>", "Peter Parkanyi <peter@redsift.io>"]
version = "1.3.0"
edition = '2018'
keywords = ["bpf", "ebpf", "redbpf"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
heck = "0.3.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[build-dependencies]
rustc_version = "0.3.0"

[dev-dependencies]
# redbpf-probes is needed by doctests
redbpf-probes = { version = "^1.3.0", path = "../redbpf-probes" }
