[package]
name = "redbpf-macros"
description = "Procedural macros for redbpf"
repository = "https://github.com/foniod/redbpf"
homepage = "https://foniod.org"
documentation = "https://docs.rs/redbpf-macros/"
authors = ["Alessandro Decina <alessandro.d@gmail.com>", "Peter Parkanyi <p@symmetree.dev>", "Junyeong Jeong <rhdxmr@gmail.com>"]
version = "2.3.0"
edition = '2018'
keywords = ["bpf", "ebpf", "redbpf"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = {version = "1.0", features = ["full"] }
quote = "1.0"
uuid = { version = "0.8.2", features = ["v4"] }

[build-dependencies]
rustc_version = "0.3.0"

[dev-dependencies]
# redbpf-probes is needed by doctests
redbpf-probes = { version = "2.3.0", path = "../redbpf-probes" }
# memoffset is needed by doctests
memoffset = "0.6"
