[package]
name = "redbpf-probes"
description = "eBPF probe-related types for redbpf"
repository = "https://github.com/redsift/redbpf"
documentation = "https://ingraind.org/api//redbpf_probes/"
authors = ["Alessandro Decina <alessandro.d@gmail.com>", "Peter Parkanyi <peter@redsift.io>"]
version = "1.3.0"
edition = '2018'
keywords = ["bpf", "ebpf", "redbpf"]
license = "MIT OR Apache-2.0"

[dependencies]
cty = "0.2"
redbpf-macros = { version = "^1.0.1", path = "../redbpf-macros" }
ufmt = { version = "0.1.0", default-features = false }

[build-dependencies]
cargo-bpf = { version = "^1.3.0", path = "../cargo-bpf", default-features = false, features = ["bindings"] }
syn = {version = "1.0", default-features = false, features = ["parsing", "visit"] }
quote = "1.0"
glob = "0.3.0"

[dev-dependencies]
memoffset = "0.5"

[features]
default = []
probes = []
