[package]
name = "redbpf-probes"
description = "eBPF probe-related types for redbpf"
repository = "https://github.com/foniod/redbpf"
homepage = "https://foniod.org"
documentation = "https://docs.rs/redbpf-probes/"
authors = ["Alessandro Decina <alessandro.d@gmail.com>", "Peter Parkanyi <p@symmetree.dev>", "Junyeong Jeong <rhdxmr@gmail.com>"]
version = "2.3.0"
edition = '2018'
keywords = ["bpf", "ebpf", "redbpf"]
license = "MIT OR Apache-2.0"

[dependencies]
cty = "0.2"
redbpf-macros = { version = "2.3.0", path = "../redbpf-macros" }
ufmt = { version = "0.1.0", default-features = false }

[build-dependencies]
cargo-bpf = { version = "2.3.0", path = "../cargo-bpf", default-features = false, features = ["bindings"] }
bpf-sys = { version = "2.3.0", path = "../bpf-sys" }
libbpf-sys = "0.6.1-2"
syn = {version = "1.0", default-features = false, features = ["parsing", "visit"] }
quote = "1.0"
glob = "0.3.0"
bindgen = { version = "0.59.2", default-features = false, features = ["runtime"] }
anyhow = "1.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

[dev-dependencies]
memoffset = "0.6"

[features]
default = []
probes = []

[package.metadata.docs.rs]
all-features = true
