[package]
name = "redbpf-tools"
version = "0.1.0"
authors = ["Alessandro Decina <alessandro.d@gmail.com>", "Peter Parkanyi <p@symmetree.dev>", "Junyeong Jeong <rhdxmr@gmail.com>"]
edition = "2018"
repository = "https://github.com/foniod/redbpf"
publish = false

[build-dependencies]
cargo-bpf = { path = "../cargo-bpf", default-features = false, features = ["build"] }

[dependencies]
probes = { path = "./probes" }
redbpf = { path = "../redbpf", features = ["load"] }
tokio = { version = "^1.0.1", features = ["rt", "macros", "signal", "time"] }
futures = "0.3"
getopts = "0.2"
libc = "0.2"

[features]
default = ["llvm12"]
llvm13 = ["cargo-bpf/llvm13"]
llvm12 = ["cargo-bpf/llvm12"]
llvm11 = ["cargo-bpf/llvm11"]
