[package]
name = "redbpf"
version = "0.9.13"
description = "eBPF build and runtime library"
repository = "https://github.com/redsift/redbpf"
documentation = "https://ingraind.org/api//redbpf/"
authors = ["Peter Parkanyi <peter@redsift.io>", "Alessandro Decina <alessandro.d@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["bpf", "ebpf", "build", "bindgen", "redbpf"]
readme = "README.md"

[badges]
circle-ci = { repository = "redsift/redbpf", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
bpf-sys = { path = "../bpf-sys", version = "^0.9.13" }
goblin = "0.2"
zero = "0.1"
libc = "0.2"
bindgen = "0.51"
regex = "1.0"
lazy_static = "1.0"

serde_derive = { version = "^1.0", optional = true}
serde_json = { version = "^1.0", optional = true}
ring = { version = "0.16", optional = true }

futures = { version = "0.3", optional = true }
mio = { version = "0.6", optional = true }
tokio = { version = "0.2.4", features = ["rt-core", "io-driver", "macros", "signal"], optional = true }

[features]
default = []
build = []
build_cache = ["serde_derive", "serde_json", "ring"]
load = ["futures", "mio", "tokio"]
