[package]
name = "redbpf"
version = "2.1.0"
description = "eBPF build and runtime library"
repository = "https://github.com/foniod/redbpf"
documentation = "https://foniod.org/api/redbpf/"
authors = ["Peter Parkanyi <p@symmetree.dev>", "Alessandro Decina <alessandro.d@gmail.com>", "Junyeong Jeong <rhdxmr@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["bpf", "ebpf", "build", "bindgen", "redbpf"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bpf-sys = { path = "../bpf-sys", version = "2.1.0" }
goblin = "0.4"
zero = "0.1"
libc = "0.2"
bindgen = {version = "0.59.1", default-features = false, features = ["runtime"]}
regex = "1.0"
lazy_static = "1.0"
byteorder = "1"

serde_derive = { version = "^1.0", optional = true}
serde_json = { version = "^1.0", optional = true}
ring = { version = "0.16", optional = true }

futures = { version = "0.3", optional = true }
tokio = { version = "^1.0.1", features = ["rt", "macros", "signal", "net"], optional = true }
tracing = "0.1.26"

[features]
default = []
build = []
build_cache = ["serde_derive", "serde_json", "ring"]
load = ["futures", "tokio"]

[package.metadata.docs.rs]
all-features = true
