[package]
name = "example-probes"
version = "0.1.0"
edition = '2018'
repository = "https://github.com/foniod/redbpf"
authors = ["Peter Parkanyi <p@symmetree.dev>", "Junyeong Jeong <rhdxmr@gmail.com>"]

[build-dependencies]
cargo-bpf = { version = "", path = "../../cargo-bpf", default-features = false, features = ["bindings"] }

[dependencies]
cty = "0.2"
redbpf-macros = { version = "", path = "../../redbpf-macros" }
redbpf-probes = { version = "", path = "../../redbpf-probes" }
memoffset = "0.6.1"

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "vfsreadlat"
path = "src/vfsreadlat/main.rs"
required-features = ["probes"]

[[bin]]
name = "mallocstacks"
path = "src/mallocstacks/main.rs"
required-features = ["probes"]

[[bin]]
name = "tcp-lifetime"
path = "src/tcp_lifetime/main.rs"
required-features = ["probes"]

[[bin]]
name = "echo"
path = "src/echo/main.rs"
required-features = ["probes"]

[[bin]]
name = "biolatpcts"
path = "src/biolatpcts/main.rs"
required-features = ["probes"]

[[bin]]
name = "sharemap1"
path = "src/sharemap1/main.rs"
required-features = ["probes"]

[[bin]]
name = "sharemap2"
path = "src/sharemap2/main.rs"
required-features = ["probes"]

[[bin]]
name = "tc-map-share"
path = "src/tc_map_share/main.rs"
required-features = ["probes"]
