[package]
name = "example-probes"
version = "0.1.0"
edition = '2018'
repository = "https://github.com/foniod/redbpf"
authors = ["Peter Parkanyi <p@symmetree.dev>", "Junyeong Jeong <rhdxmr@gmail.com>"]
description = "Example probes for redBPF"
license = "MIT OR Apache-2.0"
keywords = ["bpf", "ebpf", "build", "bindgen", "redbpf"]
publish = false

[build-dependencies]
cargo-bpf = { path = "../../cargo-bpf", default-features = false, features = ["bindings"] }
bpf-sys = { path = "../../bpf-sys" }
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

[dependencies]
cty = "0.2"
redbpf-macros = { path = "../../redbpf-macros" }
redbpf-probes = { path = "../../redbpf-probes" }
memoffset = "0.6.1"

[features]
default = []
probes = []
kernel5_8 = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "vfsreadlat"
path = "src/vfsreadlat/main.rs"
required-features = ["probes"]

[[bin]]
name = "mallocstacks"
path = "src/mallocstacks/main.rs"
required-features = ["probes"]

[[bin]]
name = "tcp-lifetime"
path = "src/tcp_lifetime/main.rs"
required-features = ["probes"]

[[bin]]
name = "echo"
path = "src/echo/main.rs"
required-features = ["probes"]

[[bin]]
name = "biolatpcts"
path = "src/biolatpcts/main.rs"
required-features = ["probes"]

[[bin]]
name = "sharemap1"
path = "src/sharemap1/main.rs"
required-features = ["probes"]

[[bin]]
name = "sharemap2"
path = "src/sharemap2/main.rs"
required-features = ["probes"]

[[bin]]
name = "tc-map-share"
path = "src/tc_map_share/main.rs"
required-features = ["probes"]

[[bin]]
name = "tasks"
path = "src/tasks/main.rs"
required-features = ["probes", "kernel5_8"]

[[bin]]
name = "hashmaps"
path = "src/hashmaps/main.rs"
required-features = ["probes"]

[[bin]]
name = "p0f"
path = "src/p0f/main.rs"
required-features = ["probes"]

[[bin]]
name = "bounded_loop"
path = "src/bounded_loop/main.rs"
required-features = ["probes"]
