[package]
name = "example-userspace"
version = "0.1.0"
authors = ["Peter Parkanyi <p@symmetree.dev>", "Junyeong Jeong <rhdxmr@gmail.com>"]
edition = "2018"
repository = "https://github.com/foniod/redbpf"
description = "Example probes for redBPF"
license = "MIT OR Apache-2.0"
keywords = ["bpf", "ebpf", "build", "bindgen", "redbpf"]
publish = false

[build-dependencies]
cargo-bpf = { path = "../../cargo-bpf", default-features = false, features = ["build"] }
tracing = "0.1.26"
tracing-subscriber = "0.3.3"

[dependencies]
probes = { path = "../example-probes", package = "example-probes" }
libc = "0.2"
tokio = { version = "^1.0.1", features = ["rt", "signal", "time", "io-util", "net", "sync"] }
redbpf = { path = "../../redbpf", features = ["load"] }
futures = "0.3"
tracing = "0.1.26"
tracing-subscriber = "0.3.3"

[[example]]
name = "tasks"
path = "examples/tasks.rs"
required-features = ["kernel5_8"]  # bpf iterator has been supported since kernel v5.8

[[example]]
name = "socket-steering"
path = "examples/socket-steering.rs"
required-features = ["kernel5_9"]  # bpf sk_lookup has been supported since kernel v5.9

[features]
kernel5_8 = []
kernel5_9 = ["kernel5_8"]
default = ["llvm12"]
llvm13 = ["cargo-bpf/llvm13"]
llvm12 = ["cargo-bpf/llvm12"]
llvm11 = ["cargo-bpf/llvm11"]
