[package]
name = "probes"
version = "0.1.0"
edition = '2018'

[build-dependencies]
cargo-bpf = { version = "^1.2.0", path = "../../cargo-bpf", default-features = false, features = ["bindings"] }

[dependencies]
cty = "0.2"
redbpf-macros = { version = "^1.0.1", path = "../../redbpf-macros" }
redbpf-probes = { version = "^1.0.1", path = "../../redbpf-probes" }

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "iotop"
path = "src/iotop/main.rs"
required-features = ["probes"]

[[bin]]
name = "knock"
path = "src/knock/main.rs"
required-features = ["probes"]
