[package]
name = "probes"
version = "0.1.0"
edition = '2018'
authors = ["Alessandro Decina <alessandro.d@gmail.com>", "Peter Parkanyi <p@symmetree.dev>", "Junyeong Jeong <rhdxmr@gmail.com>"]
repository = "https://github.com/foniod/redbpf"

[build-dependencies]
cargo-bpf = { version = "^1.3.0", path = "../../cargo-bpf", default-features = false, features = ["bindings"] }
glob = "0.3.0"
bpf-sys = { version = "*", path = "../../bpf-sys" }
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

[dependencies]
cty = "0.2"
redbpf-macros = { version = "^1.3.0", path = "../../redbpf-macros" }
redbpf-probes = { version = "^1.3.0", path = "../../redbpf-probes" }

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "iotop"
path = "src/iotop/main.rs"
required-features = ["probes"]

[[bin]]
name = "knock"
path = "src/knock/main.rs"
required-features = ["probes"]
